# Course-de-voile-en-r-seau

./: .gitignore  CMakeLists.txt  Protocol.h  README.md  client.cpp  sailinsane.cpp  server.cpp
resources/: sheet.xml
src/: Constants.h  LoggingUtils.h  Protocol.h  config.h.in
src/client/: Banner.cpp  Banner.h  BoatEntity.cpp  BoatEntity.h  ClientBoat.cpp  ClientBoat.h  ClientNetworkHandler.cpp  ClientNetworkHandler.h  ClientPlayer.cpp  ClientPlayer.h  ClientStringConstants.h  ClientWorld.cpp  ClientWorld.h  NavigationArrow.cpp  NavigationArrow.h  PredictionEngine.cpp  PredictionEngine.h  Singletons.cpp  Singletons.h  Terrain.cpp  Terrain.h  Weathercock.cpp  Weathercock.h  WindArrow.cpp  WindArrow.h  client.cpp
src/physics/: Boat.cpp  Boat.h  BoatControl.cpp  BoatControl.h  BoatController.cpp  BoatController.h  Conversions.h  Physics.cpp  Physics.h  Wind.cpp  Wind.h  World.h
src/server/: Boat.cpp  Boat.h  BoatWrapper.cpp  BoatWrapper.h  Game.cpp  Game.h  GameMessages.h  Managers.cpp  Managers.h  Player.cpp  Player.h  ServerBoat.cpp  ServerBoat.h  ServerNetworkHandler.cpp  ServerNetworkHandler.h  ServerStringConstants.h  ServerWorld.cpp  ServerWorld.h  World.cpp  World.h  server.cpp
